<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="eula">Пользовательское соглашение</string>
    <string name="share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">ash6789@yandex.ru</string>
    <string name="support_subj">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="eula_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="history_header">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country_label">Страна</string>
    <string name="genre_label">Жанр</string>
    <string name="year_label">Год</string>
    <string name="album_label">Альбом</string>
    <string name="length_label">Длительность</string>
    <string name="cover_image">Обложка альбома</string>
    <string name="btn_back">Назад</string>
    <string name="btn_add_to_playlist">Добавить в плейлист</string>
    <string name="btn_like">Нравится</string>
    <string name="btn_play">Воспроизведение/пауза</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="text_name">Название*</string>
    <string name="text_desc">Описание</string>
    <string name="text_create">Создать</string>
    <string name="playlist_created_message">Плейлист "%1$s" создан</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_text">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_close">Завершить</string>
    <string name="storage_permission_rationale">Доступ к файлам необходим для выбора обложки альбома.</string>
    <string name="delete_track_dialog_title">Хотите удалить трек?</string>
    <string name="delete_track_dialog_no">НЕТ</string>
    <string name="delete_track_dialog_yes">ДА</string>
    <string name="share_playlist_title">Поделиться плейлистом</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_apps">Приложение не выбрано</string>
    <string name="delete_playlist_dialog_title">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="playlist_deleted_message">Плейлист "%1$s" удалён</string>
    <string name="save_button_text">Сохранить</string>
    <string name="edit_playlist_tittle">Изменить %1$s</string>
    <string name="empty_playlist">Плейлист \nпуст</string>


    <plurals name="track_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
</resources>