<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker">

    <LinearLayout
        style="@style/LinearLayoutHeaderStyle"
        android:theme="@style/Theme.PlaylistMaker"
        >

        <ImageView
            android:id="@+id/btn_back"
            style="@style/ImageBackButton"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/TextViewHeaderStyle"
            android:text="@string/settings"
            />
    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw"
        style="@style/SettingsSwitch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_61"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginEnd="6dp"
        android:width="56dp"
        android:height="@dimen/dp_40"
        android:text="@string/dark_theme"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/sp_16"
        />

    <LinearLayout
        android:id="@+id/btn_share"
        style="@style/LinearLayoutSettingsStyle"
        android:layout_height="@dimen/dp_61"
        >

        <TextView
            style="@style/TextViewSettingsStyle"
            android:text="@string/share"
            />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/ic_share"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_support"
        style="@style/LinearLayoutSettingsStyle"
        android:layout_height="@dimen/dp_61"
        >

        <TextView
            style="@style/TextViewSettingsStyle"
            android:text="@string/support"
            />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/ic_support"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_eula"
        style="@style/LinearLayoutSettingsStyle"
        android:layout_height="@dimen/dp_61"
        >

        <TextView
            style="@style/TextViewSettingsStyle"
            android:text="@string/eula"
            />

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/ic_eula_arrow"
            />
    </LinearLayout>
</LinearLayout>