<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextViewHeaderStyle"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/app_name"
            android:textColor="@color/white"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btn_search"
            style="@style/MainButtonStyle"
            android:text="@string/search"
            app:icon="@drawable/ic_search"
            app:iconTint="@color/YP_black"
            />

        <Button
            android:id="@+id/btn_library"
            style="@style/MainButtonStyle"
            android:text="@string/library"
            app:icon="@drawable/ic_library"
            app:iconTint="@color/YP_black"
            />


        <Button
            android:id="@+id/btn_settings"
            style="@style/MainButtonStyle"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            app:iconTint="@color/YP_black"
            />
    </LinearLayout>
</LinearLayout>